// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditContact Component matches the snapshot 1`] = `
Array [
  <div
    className="d-flex justify-content-between align-items-center"
  >
    <h3>
      New Contact
    </h3>
  </div>,
  <div
    className="content-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-9"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="d-flex align-items-center mt-3 mb-3"
            >
              <span
                style={
                  Object {
                    "fontWeight": "bold",
                    "marginRight": 10,
                  }
                }
              >
                Steps: 
              </span>
              <div
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#C41F3E",
                    "border": "2px solid #C41F3E",
                    "borderRadius": 50,
                    "color": "white",
                    "display": "flex",
                    "height": 25,
                    "justifyContent": "center",
                    "width": 25,
                  }
                }
              >
                1
              </div>
              <div
                style={
                  Object {
                    "backgroundColor": "grey",
                    "height": 2,
                    "width": 15,
                  }
                }
              />
              <div
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                style={
                  Object {
                    "alignItems": "center",
                    "border": "2px solid grey",
                    "borderRadius": 50,
                    "display": "flex",
                    "height": 25,
                    "justifyContent": "center",
                    "width": 25,
                  }
                }
              >
                2
              </div>
            </div>
          </div>
        </div>
        <div
          className="border-top my-3"
        />
        <div
          className="row"
        >
          <div
            className="col"
          >
            <h3>
              Contact Profile:
            </h3>
            <ul
              style={
                Object {
                  "marginTop": 50,
                }
              }
            >
              <li>
                Change the contact profile by deleting or typing over the existing content then selecting Next
              </li>
              <li>
                Enter an email address or mobile phone number for your contact
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="col-3"
      >
        <div
          className="border p-2 rounded"
        >
          <b>
            You can also:
          </b>
          <br />
          View upcoming bill payments and transfers &gt;
          <br />
          Stop a payment &gt;
          <br />
          Change your statement preferences &gt;
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <span>
          Firstname:
        </span>
      </div>
      <div
        className="col-4"
      >
        <input
          className="form-control"
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <span>
          Lastname:
        </span>
      </div>
      <div
        className="col-4"
      >
        <input
          className="form-control"
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <span>
          Phone:
        </span>
      </div>
      <div
        className="col-4"
      >
        <input
          className="form-control"
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <div
        className="col-4"
      >
        <span
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          Email Address:
        </span>
      </div>
      <div
        className="col"
      >
        <input
          className="form-control"
          onChange={[Function]}
          type="text"
        />
      </div>
      <div
        className="col"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "left",
          }
        }
      >
        <a
          href="/"
        >
          Delete
        </a>
      </div>
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
      style={
        Object {
          "marginTop": 30,
        }
      }
    >
      <div
        className="col"
      >
        <span>
          Notification Language:
        </span>
      </div>
      <div
        className="col"
      >
        <select
          className="form-select"
        >
          <option>
            English
          </option>
        </select>
      </div>
      <div
        className="col"
      />
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
    >
      <div
        className="col"
        style={
          Object {
            "background": "white",
            "padding": 0,
          }
        }
      >
        <button
          className="d-flex btn btn-light"
          disabled={false}
          style={
            Object {
              "background": "white",
              "border": "none",
              "margin": 0,
            }
          }
          type="button"
        >
          <div
            style={
              Object {
                "border": "1px dotted grey",
                "height": 25,
                "marginRight": 10,
                "textAlign": "center",
                "width": 20,
              }
            }
          >
            P
          </div>
          Cancel
        </button>
      </div>
      <div
        className="col"
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn zippy-btn btn btn-primary"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "marginLeft": 15,
            }
          }
          type="button"
        >
          Next
        </button>
      </div>
    </div>
    <hr
      style={
        Object {
          "background": "gray",
          "borderWidth": "0px",
          "color": "gray",
          "height": "2px",
          "marginTop": 40,
        }
      }
    />
    <div
      className="row"
    >
      <div
        className="mt-4"
      >
        <div
          className="d-flex"
        >
          <div
            style={
              Object {
                "border": "1px dotted grey",
                "height": 25,
                "marginRight": 10,
                "textAlign": "center",
                "width": 20,
              }
            }
          >
            P
          </div>
          <span
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Note:
          </span>
        </div>
        <div>
          <span>
            Your use of Interac e-Transfer is subject to the 
          </span>
          <div
            className="row"
          >
            <div
              className="d-flex align-items-center mt-2 col-md-12"
            >
              <div
                style={
                  Object {
                    "border": "1px dotted grey",
                    "height": 25,
                    "marginRight": 10,
                    "textAlign": "center",
                    "width": 20,
                  }
                }
              >
                P
              </div>
              <span>
                Interac e-Transfer Terms and Conditions (PDF, 197KB).
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="footer-content-wrapper"
  >
    <div
      className="quick-links container"
    >
      <div
        className="row"
      >
        <h3
          className="col-sm-12"
        >
          Quick Links
        </h3>
      </div>
      <div
        className="row"
      >
        <div
          className="col-sm-2"
        >
          <ul>
            <li>
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Home
              </a>
            </li>
            <li>
              Please Review Our Legal Stuff by visiting our
               
              <a
                className="text-decoration-none"
                href="/legal"
                onClick={[Function]}
              >
                Privacy Policy | TOU | EULA | CardHolder T&C Pages
              </a>
            </li>
          </ul>
        </div>
        <div
          className="col-sm-2"
        >
          8465 W Sahara Ave. Las Vegas, NEVADA
          <ul>
            <li>
              <a
                href="tel:+17026231876"
              >
                1.702.623.1876
              </a>
            </li>
            <li>
              <a
                href="mailto:contact@zippy.cash"
              >
                contact@zippy.cash
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12 col-sm-12 col-xs-12 text-left"
        >
          © 2021 Zippy Cash LLC  All rights reserved.
          <br />
          <br />
          The Program Manager for the Zippy Cash® Prepaid Visa Debit Card is PayQuicker, LLC
          <br />
          Zippy Cash® is a registered trademark of Zippy Cash, LLC
          <br />
          The Zippy Cash Prepaid Visa Debit Card is issued by Metropolitan Commercial Bank (Member FDIC) pursuant to a license from Visa U.S.A. Inc. “Metropolitan Commercial Bank” and “Metropolitan” are registered trademarks of Metropolitan Commercial Bank ©2014. BY USING THIS CARD YOU AGREE TO THE TERMS AND CONDITIONS OF THE CARDHOLDER AGREEMENT AND FEE SCHEDULE, IF ANY. All trademarks and service marks are the property of their respective owners.
          <br />
          In compliance with the USA PATRIOT Act* and other laws, anyone who is a US resident over 18 with a valid Social Security number and a verifiable physical US address (no PO boxes or APO addresses) can apply for an Zippy Cash Card. This information must be provided, along with other information pertinent to receiving approval, when applying for a Zippy Cash Card. Currently, we do not issue the Zippy Cash Card to residents of Puerto Rico, Guam, the Virgin Islands, American Samoa, or other US territories.
          <br />
          *Important information for opening a card account: To help the federal government fight the funding of terrorism and money laundering activities, the USA PATRIOT Act requires all financial institutions and their third parties to obtain, verify and record information that identifies each person who opens a card account. What this means for you: When you open a card account, we will ask for your name, address, date of birth, social security number or country identification number, and other information that will allows us to identify you. We may also request a copy of your driver’s license or other documentation bearing your photo as verification of your identity.
          <br />
          Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. App Store is a service mark of Apple Inc. Google Play is a trademark of Google Inc. Data rates may apply. Samsung Pay is a trademark of Samsung Inc.
        </div>
      </div>
    </div>
    <footer
      className="container mb-3"
    >
      <div
        className="d-none d-md-block"
      >
        <div
          className="d-flex justify-content-between border-bottom"
        />
        <div
          className="d-flex justify-content-between border-top"
        >
          <div
            className=""
          >
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Lore
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Ipsum
              </a>
            </div>
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
          <div
            className="copyright mt-1"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
      <div
        className="d-block d-md-none"
      >
        <div
          className="d-flex border-bottom"
        >
          <div
            className="d-flex flex-column me-2"
          >
            <div
              className="footer-link mt-1"
            >
              <a
                className="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Lore
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Ipsum
              </a>
            </div>
            <div
              className="footer-link mb-1"
            >
              <a
                className="text-decoration-none"
                href="/"
                onClick={[Function]}
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
        </div>
        <div
          className="d-flex justify-content-end border-top"
        >
          <div
            className="copyright mt-2 text-end small"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>,
]
`;

exports[`EditContact Component should render title 1`] = `
<div>
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <h3>
      New Contact
    </h3>
  </div>
  <div
    class="content-wrapper"
  >
    <div
      class="row"
    >
      <div
        class="col-9"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="d-flex align-items-center mt-3 mb-3"
            >
              <span
                style="font-weight: bold; margin-right: 10px;"
              >
                Steps: 
              </span>
              <div
                role="button"
                style="width: 25px; height: 25px; border-radius: 50px; border: 2px solid #c41f3e; display: flex; justify-content: center; align-items: center; background-color: rgb(196, 31, 62); color: white;"
              >
                1
              </div>
              <div
                style="height: 2px; width: 15px; background-color: grey;"
              />
              <div
                role="button"
                style="width: 25px; height: 25px; border-radius: 50px; border: 2px solid grey; display: flex; justify-content: center; align-items: center;"
              >
                2
              </div>
            </div>
          </div>
        </div>
        <div
          class="border-top my-3"
        />
        <div
          class="row"
        >
          <div
            class="col"
          >
            <h3>
              Contact Profile:
            </h3>
            <ul
              style="margin-top: 50px;"
            >
              <li>
                Change the contact profile by deleting or typing over the existing content then selecting Next
              </li>
              <li>
                Enter an email address or mobile phone number for your contact
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="col-3"
      >
        <div
          class="border p-2 rounded"
        >
          <b>
            You can also:
          </b>
          <br />
          View upcoming bill payments and transfers &gt;
          <br />
          Stop a payment &gt;
          <br />
          Change your statement preferences &gt;
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-4"
      >
        <span>
          Firstname:
        </span>
      </div>
      <div
        class="col-4"
      >
        <input
          class="form-control"
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
    >
      <div
        class="col-4"
      >
        <span>
          Lastname:
        </span>
      </div>
      <div
        class="col-4"
      >
        <input
          class="form-control"
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
    >
      <div
        class="col-4"
      >
        <span>
          Phone:
        </span>
      </div>
      <div
        class="col-4"
      >
        <input
          class="form-control"
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
      style="margin-top: 30px;"
    >
      <div
        class="col-4"
      >
        <span
          style="display: flex; align-items: center;"
        >
          Email Address:
        </span>
      </div>
      <div
        class="col"
      >
        <input
          class="form-control"
          type="text"
          value=""
        />
      </div>
      <div
        class="col"
        style="display: flex; align-items: center; justify-content: left;"
      >
        <a
          href="/"
        >
          Delete
        </a>
      </div>
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
      style="margin-top: 30px;"
    >
      <div
        class="col"
      >
        <span>
          Notification Language:
        </span>
      </div>
      <div
        class="col"
      >
        <select
          class="form-select"
        >
          <option>
            English
          </option>
        </select>
      </div>
      <div
        class="col"
      />
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
    >
      <div
        class="col"
        style="padding: 0px; background: white;"
      >
        <button
          class="d-flex btn btn-light"
          style="margin: 0px; background: white;"
          type="button"
        >
          <div
            style="width: 20px; height: 25px; border: 1px dotted grey; text-align: center; margin-right: 10px;"
          >
            P
          </div>
          Cancel
        </button>
      </div>
      <div
        class="col"
        style="display: flex; justify-content: flex-end;"
      >
        <button
          class="btn zippy-btn btn btn-primary"
          style="margin-left: 15px;"
          type="button"
        >
          Next
        </button>
      </div>
    </div>
    <hr
      style="height: 2px; border-width: 0px; color: gray; background: gray; margin-top: 40px;"
    />
    <div
      class="row"
    >
      <div
        class="mt-4"
      >
        <div
          class="d-flex"
        >
          <div
            style="width: 20px; height: 25px; border: 1px dotted grey; text-align: center; margin-right: 10px;"
          >
            P
          </div>
          <span
            style="font-weight: bold;"
          >
            Note:
          </span>
        </div>
        <div>
          <span>
            Your use of Interac e-Transfer is subject to the 
          </span>
          <div
            class="row"
          >
            <div
              class="d-flex align-items-center mt-2 col-md-12"
            >
              <div
                style="width: 20px; height: 25px; border: 1px dotted grey; text-align: center; margin-right: 10px;"
              >
                P
              </div>
              <span>
                Interac e-Transfer Terms and Conditions (PDF, 197KB).
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="footer-content-wrapper"
  >
    <div
      class="quick-links container"
    >
      <div
        class="row"
      >
        <h3
          class="col-sm-12"
        >
          Quick Links
        </h3>
      </div>
      <div
        class="row"
      >
        <div
          class="col-sm-2"
        >
          <ul>
            <li>
              <a
                class="text-decoration-none"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              Please Review Our Legal Stuff by visiting our
               
              <a
                class="text-decoration-none"
                href="/legal"
              >
                Privacy Policy | TOU | EULA | CardHolder T&C Pages
              </a>
            </li>
          </ul>
        </div>
        <div
          class="col-sm-2"
        >
          8465 W Sahara Ave. Las Vegas, NEVADA
          <ul>
            <li>
              <a
                href="tel:+17026231876"
              >
                1.702.623.1876
              </a>
            </li>
            <li>
              <a
                href="mailto:contact@zippy.cash"
              >
                contact@zippy.cash
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md-12 col-sm-12 col-xs-12 text-left"
        >
          © 2021 Zippy Cash LLC  All rights reserved.
          <br />
          <br />
          The Program Manager for the Zippy Cash® Prepaid Visa Debit Card is PayQuicker, LLC
          <br />
          Zippy Cash® is a registered trademark of Zippy Cash, LLC
          <br />
          The Zippy Cash Prepaid Visa Debit Card is issued by Metropolitan Commercial Bank (Member FDIC) pursuant to a license from Visa U.S.A. Inc. “Metropolitan Commercial Bank” and “Metropolitan” are registered trademarks of Metropolitan Commercial Bank ©2014. BY USING THIS CARD YOU AGREE TO THE TERMS AND CONDITIONS OF THE CARDHOLDER AGREEMENT AND FEE SCHEDULE, IF ANY. All trademarks and service marks are the property of their respective owners.
          <br />
          In compliance with the USA PATRIOT Act* and other laws, anyone who is a US resident over 18 with a valid Social Security number and a verifiable physical US address (no PO boxes or APO addresses) can apply for an Zippy Cash Card. This information must be provided, along with other information pertinent to receiving approval, when applying for a Zippy Cash Card. Currently, we do not issue the Zippy Cash Card to residents of Puerto Rico, Guam, the Virgin Islands, American Samoa, or other US territories.
          <br />
          *Important information for opening a card account: To help the federal government fight the funding of terrorism and money laundering activities, the USA PATRIOT Act requires all financial institutions and their third parties to obtain, verify and record information that identifies each person who opens a card account. What this means for you: When you open a card account, we will ask for your name, address, date of birth, social security number or country identification number, and other information that will allows us to identify you. We may also request a copy of your driver’s license or other documentation bearing your photo as verification of your identity.
          <br />
          Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. App Store is a service mark of Apple Inc. Google Play is a trademark of Google Inc. Data rates may apply. Samsung Pay is a trademark of Samsung Inc.
        </div>
      </div>
    </div>
    <footer
      class="container mb-3"
    >
      <div
        class="d-none d-md-block"
      >
        <div
          class="d-flex justify-content-between border-bottom"
        />
        <div
          class="d-flex justify-content-between border-top"
        >
          <div
            class=""
          >
            <div
              class="footer-link mt-1"
            >
              <a
                class="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              class="footer-link mt-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Lore
              </a>
            </div>
            <div
              class="footer-link mt-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Ipsum
              </a>
            </div>
            <div
              class="footer-link mt-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
          <div
            class="copyright mt-1"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
      <div
        class="d-block d-md-none"
      >
        <div
          class="d-flex border-bottom"
        >
          <div
            class="d-flex flex-column me-2"
          >
            <div
              class="footer-link mt-1"
            >
              <a
                class="text-decoration-none"
                href="/personal-profile"
              >
                dev docs
              </a>
            </div>
            <div
              class="footer-link mb-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Lore
              </a>
            </div>
            <div
              class="footer-link mb-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Ipsum
              </a>
            </div>
            <div
              class="footer-link mb-1"
            >
              <a
                class="text-decoration-none"
                href="/"
              >
                Nullam Atoidio
              </a>
            </div>
          </div>
        </div>
        <div
          class="d-flex justify-content-end border-top"
        >
          <div
            class="copyright mt-2 text-end small"
          >
            <span>
              © 2021 Lorem ipsum dolor sit amet, consectetuer
            </span>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
